--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
+    "react-exp-table": "^2.0.5",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1"
   },
