--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-google-maps/api": "^2.20.7",
+    "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/bcrypt": "^6.0.0",
     "apexcharts": "^5.3.5",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
@@ -32,7 +36,9 @@
     "react-dom": "19.1.0",
     "react-exp-table": "^2.0.5",
     "recharts": "^2.15.4",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "undici": "^7.16.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
