--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-rekognition": "^3.901.0",
+    "@hookform/resolvers": "^5.2.2",
     "@nivo/pie": "^0.99.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -23,6 +26,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcrypt": "^6.0.0",
+    "@uploadthing/react": "^7.3.3",
     "apexcharts": "^5.3.5",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -36,10 +40,11 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-exp-table": "^2.0.5",
+    "react-hook-form": "^7.64.0",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "undici": "^7.16.0",
-    "zod": "^4.1.11"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
